--- a/frontend/src/layout.css
+++ b/frontend/src/layout.css
@@ -7,7 +7,8 @@ h1 {
     margin: 20px auto;
     position: relative;
     letter-spacing: 0.7px;
-  }
+}
+
   .container-custom {
     max-width: 900px;
     margin: 0 auto;   
@@ -191,27 +192,27 @@ h1 {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -2px; /* Position the underline just below the text */
+  bottom: -2px; 
   width: 0;
   height: 3px;
-  background-color: #007bff; /* Blue color for underline */
+  background-color: #007bff;
   transition: width 0.3s ease;
 }
 
 .nav-item-custom:hover {
-  color: #007bff; /* Changes text color to blue on hover */
+  color: #007bff; 
 }
 
 .nav-item-custom:hover::after {
-  width: 100%; /* Expands the underline when hovered */
+  width: 100%;
 }
 
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.border-bottom {
-  padding-left: 1rem; /* Adds padding to align content better */
+  padding-left: 1rem; 
 }
 
 .container-fluid {
-  max-width: 1200px; /* Optional: limit the container width */
+  max-width: 1200px; 
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -219,56 +220,20 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.border-bottom {
   
   /* Notes Page */
   
-  .notes-card {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 100%; /* Bruk hele bredden av kolonnen */
-    max-width: 600px; /* Satt til 600px for konsistent bredde */
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .notes-link {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .notes-card-body {
-    padding: 16px;
-  }
-  
-  .notes-card-title {
-    font-size: 1.5em;
+  .card-title {
+    font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 8px;
-  }
-  
-  .notes-card-text {
-    font-size: 1em;
     color: #333;
-    margin-bottom: 12px;
+}
+ 
+  .card-text{
+    font-size: 1rem;
+    color: #4f4f4f;
+    line-height: 1.6;
   }
   
-  .notes-card-meta {
-    font-size: 0.85em;
-    color: #777;
-  }
   
-  /* Knapper for redigering og sletting */
-  .notes-btn {
-    display: inline-block;
-    padding: 8px 12px;
-    border-radius: 4px;
-    font-size: 0.9em;
-    font-weight: bold;
-    margin-right: 8px;
-    transition: background-color 0.3s ease;
-  }
-  
+ 
   .notes-btn-edit {
     background-color: #ffc107;
     color: #fff;
