--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -120,7 +120,7 @@ code {
 }
 /* Delete btn */
 .btn-delete {
-    background-color: #ff4d4d; /* Rød farge for slett-knappen */
+    background-color: #ff4d4d; 
     color: white;
     border: none;
     padding: 5px 10px;
@@ -130,7 +130,7 @@ code {
 }
 
 .btn-delete:hover {
-    background-color: #e60000; /* Endrer fargen når man hover over knappen */
+    background-color: #e60000; 
 }
 .picture-feed-card {
     background-color: #fff;
